Support building in java 10.
Signed-off-by: David Black <dblack@atlassian.com>